Refactor validation imports and update README for consistency